--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node ./index.js",
     "run": "nodemon ./index.js",
     "ui": "browser-sync start --config bs-config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
