--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "express": "^4.18.1",
     "path": "^0.12.7",
     "pug": "^3.0.2"
   },
